# dp-federated-lora-lab

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .env.template  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_QUANTUM_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  GENERATION_2_ROBUSTNESS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_CHARTER.md  QUANTUM_ENHANCEMENTS_SUMMARY.md  QUANTUM_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_IMPLEMENTATION.md  TERRAGON_AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_IMPLEMENTATION_FINAL.md  autonomous_evolution_intelligence_engine.py  autonomous_federated_demo.py  autonomous_global_orchestration_engine.py  (+82 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  project-metrics.json
.github/workflows/: autonomous-ci.yml  security.yml
.quickstart/: demo_config.json
.terragon/: README.md  autonomous-executor.py  config.yaml  execution-metrics.json  simple-discovery.py  value-discovery.py
comprehensive_validation/: comprehensive_validation_report.json
demo_data/: client_0_data.json  client_1_data.json  client_2_data.json  client_3_data.json  client_4_data.json
deployment/: docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  global_deployment.yaml  global_deployment_orchestrator.py  k8s_development_deployment.yaml  k8s_production_deployment.yaml  k8s_staging_deployment.yaml  production-deployment-orchestrator.py  production.yml  terraform_development.tf  terraform_production.tf  terraform_staging.tf
deployment/global-deployment/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  network-policy.yaml  service.yaml
deployment/kubernetes/: development-deployment.yaml  development-monitoring.yaml  development-namespace.yaml  development-security.yaml  federated-server.yaml  hpa.yaml  namespace.yaml  production-deployment.yaml  production-monitoring.yaml  production-namespace.yaml  production-security.yaml  staging-deployment.yaml  staging-monitoring.yaml  staging-namespace.yaml  staging-security.yaml
deployment/terraform/: development.tf  main.tf  production.tf  staging.tf  variables.tf
deployment_results/: production_deployment_report.json
docs/: IMPLEMENTATION_SUMMARY.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-lora-parameter-efficient-finetuning.md  0002-differential-privacy-opacus.md  README.md  template.md
docs/github-workflows/: README.md  autonomous-security.yml  ci.yml  dependency-update.yml  release.yml
docs/workflows/: ci-cd.md
enhanced_research_output/: checkpoint.json
evolution_intelligence_output/: evolution_report_d70b0d072c3d6c972f0b.json
examples/: advanced_research_demonstration.py  basic_federated_training.py  comprehensive_quantum_federated_example.py  high_performance_federated_training.py  network_federated_training.py  privacy_analysis.py  quantum_federated_training.py
federated_results/: mock_experiment_results.json  resilient_training_results.json
federation_results/: healthcare_results.json
global_orchestration_output/: global_orchestration_report_013c315583272144dc.json
global_publication_output/: manuscript_de.md  manuscript_es.md  manuscript_fr.md  publication_acm.tex  publication_arxiv.tex  publication_ieee.tex  publication_neurips.tex  publication_package.json
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
optimization_results/: quantum_optimization_results.json
production_deployment_output/: global_orchestration_report_9dcdc29c70e8.json  production_readiness_report_ebe0e3f39dad184825aeb6.json
quality_validation_output/: quality_report_0aa0d0de36f304fc.json
quantum_scaling_output/: quantum_scaling_report_2d829dc4ea547c.json
reports/: detailed-metrics-report.md  executive-summary.md  metrics-report.html  metrics-report.json
research_validation_output/: research_validation_report_c1ddf4de.json
resilience_output/: resilience_report_dce62b5490.json
scripts/: autonomous_sdlc_completion_orchestrator.py  autoscaling_triggers.py  benchmark_performance.py  check_license_headers.py  collect_metrics.py  comprehensive_quality_gates_validator.py  comprehensive_testing.py  dependency_security_check.py  deploy_production.py  epsilon_auditor.py  final_deployment_validation.py  generate_reports.py  health-check.py  health_check.py  license_header_template.py  privacy_validator.py  quality_gates.py  quality_gates_validator.py  run_basic_quality_gates.py  run_comprehensive_quality_gates.py  run_quality_gates.py  run_tests.py  standalone_quality_validation.py  update_metrics.py
security_output/: security_report_dc7d1714b184.json
simplified_demo_output/: algorithm_demonstration_results.json
src/dp_federated_lora/: __init__.py  adaptive_optimization.py  adaptive_privacy_budget_optimizer.py  advanced_monitoring.py  advanced_monitoring_alerting.py  advanced_security.py  aggregation.py  auto_scaling_system.py  autonomous_evolution_engine.py  autonomous_sdlc_orchestrator.py  autonomous_validation_engine.py  cli.py  client.py  comprehensive_monitoring.py  comprehensive_monitoring_system.py  comprehensive_testing.py  comprehensive_testing_framework.py  comprehensive_validation_engine.py  (+58 more)
standalone_validation/: standalone_research_report.json
test_results/: comprehensive_test_report.json
tests/: __init__.py  conftest.py  test_adaptive_privacy_budget_optimizer.py  test_advanced_components.py  test_basic_functionality.py  test_dp_federated_lora.py  test_novel_lora_optimization.py  test_quantum_components.py  test_quantum_enhanced_systems.py
(+12 files in other folders)
