[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-federated-lora-lab"
version = "0.1.0"
description = "Reference implementation of differentially-private Federated LoRA fine-tuning for foundation models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.com"},
]
maintainers = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "accelerate>=0.20.0",
    "peft>=0.4.0",
    "opacus>=1.4.0",
    "wandb>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
benchmark = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "streamlit>=1.25.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dp-federated-lora-lab"
Documentation = "https://dp-federated-lora.readthedocs.io"
Repository = "https://github.com/yourusername/dp-federated-lora-lab.git"
Issues = "https://github.com/yourusername/dp-federated-lora-lab/issues"

[project.scripts]
dp-fed-lora = "dp_federated_lora.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dp_federated_lora"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "privacy: marks tests as privacy-related",
    "federated: marks tests as federated learning tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101", "B601"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

# Development Scripts (equivalent to package.json scripts)
[tool.poe.tasks]
# Core development tasks
test = "pytest tests/ -v --tb=short"
test-cov = "pytest tests/ --cov=src --cov-report=html --cov-report=term-missing"
test-fast = "pytest tests/ -x --tb=line"
test-parallel = "pytest tests/ -n auto"

# Code quality tasks  
lint = "ruff check src/ tests/ --fix"
format = "black src/ tests/ scripts/"
format-check = "black --check src/ tests/ scripts/"
sort-imports = "isort src/ tests/ scripts/"
type-check = "mypy src/"
security-check = "bandit -r src/ --severity-level medium"

# Combined quality checks
quality = ["format", "sort-imports", "lint", "type-check"]
quality-check = ["format-check", "lint", "type-check"]

# Development environment
install-dev = "pip install -e .[dev,docs,benchmark]"
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"

# Build and distribution
build = "python -m build"
build-clean = ["clean", "build"]
clean = "rm -rf build/ dist/ *.egg-info/ htmlcov/ .coverage .pytest_cache/ .mypy_cache/ .tox/"

# Documentation
docs-build = "sphinx-build -b html docs/ docs/_build/html"
docs-clean = "rm -rf docs/_build/"
docs-serve = "python -m http.server 8000 -d docs/_build/html"
docs-live = "sphinx-autobuild docs/ docs/_build/html --host 0.0.0.0 --port 8000"

# Server and client management
server = "python -m dp_federated_lora.server"
server-dev = "python -m dp_federated_lora.server --debug --reload"
client-mock = "python -m dp_federated_lora.client --mock-data"
dashboard = "streamlit run scripts/dashboard.py"

# Privacy and security validation
privacy-check = "python scripts/privacy_validator.py"
epsilon-audit = "python scripts/epsilon_auditor.py"
security-audit = ["security-check", "privacy-check"]

# Benchmarking and evaluation
benchmark = "python scripts/run_benchmarks.py"
benchmark-privacy = "python scripts/benchmark_privacy.py"
benchmark-performance = "python scripts/benchmark_performance.py"

# Utilities
health-check = "python scripts/health-check.py"
reset-db = "python scripts/reset_database.py"
generate-certs = "python scripts/generate_certificates.py"

# Docker tasks
docker-build = "docker build -t dp-federated-lora:latest ."
docker-run = "docker-compose up -d"
docker-down = "docker-compose down"
docker-logs = "docker-compose logs -f"

# Comprehensive development workflow
dev-setup = ["install-dev", "pre-commit-install", "generate-certs", "reset-db"]
dev-test = ["quality-check", "test-cov", "security-audit"]
dev-all = ["dev-setup", "dev-test"]